--- a/webapi/Directory.Packages.props
+++ b/webapi/Directory.Packages.props
@@ -19,7 +19,7 @@
     <PackageVersion Include="Destructurama.JsonNet" Version="4.0.2" />
     <PackageVersion Include="EasyNetQ.Management.Client" Version="3.0.1" />
     <PackageVersion Include="ErikEJ.EntityFrameworkCore.DgmlBuilder" Version="6.0.0" />
-    <PackageVersion Include="FluentAssertions" Version="6.12.1" />
+    <PackageVersion Include="AwesomeAssertions" Version="9.3.0" />
     <PackageVersion Include="Hangfire.AspNetCore" Version="1.8.22" />
     <PackageVersion Include="Hangfire.Core" Version="1.8.22" />
     <PackageVersion Include="Hangfire.Dashboard.BasicAuthorization" Version="1.0.2" />
