--- a/.ci/azure-pipelines-template.yml
+++ b/.ci/azure-pipelines-template.yml
@@ -125,7 +125,7 @@ stages:
       - stage: DeployToDev
         dependsOn:
           - BeforeDeploy
-        condition: and(succeeded(), not(startsWith(variables['Build.SourceBranch'], 'refs/heads/release'))))
+        condition: and(succeeded(), not(startsWith(variables['Build.SourceBranch'], 'refs/heads/release')))
         jobs:
           - deployment: k8sDevDeployment
             environment:
