ability to disable sending certain emails

--- a/webapi/src/MccSoft.TemplateApp.App/appsettings.json
+++ b/webapi/src/MccSoft.TemplateApp.App/appsettings.json
@@ -196,7 +196,11 @@
     "Login": "mcc.template.app@gmail.com",
     "Password": "",
     "From": "mcc.template.app@gmail.com",
-    "FromName": "Template App"
+    "FromName": "Template App",
+    "Enabled": true,
+    "DisabledModels": {
+      // "ExampleEmailModel": true,
+    }
   },
   "ProductDataLoggerJobSettings": {
     "CronExpression": "0 */1 * * *"
