CI: automatically add PR pipeline

--- a/.ci/azure-pipelines-pr-tests.yml
+++ b/.ci/azure-pipelines-pr-tests.yml
@@ -10,6 +10,11 @@
 # - ./_settings/pr.yml
 # - ./_settings/pr.partial.yml --or change here
 trigger: none
+pr:
+  branches:
+    include:
+      - '*' # Trigger on PRs targeting any branch
+
 parameters:
   - name: sb_test_shards
     type: number
