adjust opensearch configuration

--- a/k8s/aks-rancher/stages/dev.env
+++ b/k8s/aks-rancher/stages/dev.env
@@ -6,8 +6,8 @@ export hostname="template.mcc-soft.de"
 # configMaps.yaml
 export EMAIL=templateapp@mcc-soft.de
 export Sentry__Dsn=https://b00b94bddfeb4097a5078a6dc2bf5f03@o920098.ingest.sentry.io/5864957
-export Serilog__Elastic__Url=
-export Serilog__Elastic__User=
+export Serilog__Elastic__Url=https://logs.mcc-soft.de/data/
+export Serilog__Elastic__User=templateapp-dev
 export Serilog__Remote__InstanceName="${hostname}"
 export General__SiteUrl="https://${hostname}"
 export Hangfire__EnableDashboard="true"
