--- a/webapi/src/MccSoft.TemplateApp.App/appsettings.Development.json
+++ b/webapi/src/MccSoft.TemplateApp.App/appsettings.Development.json
@@ -11,6 +11,14 @@
       "Url": ""
     }
   },
+  "Serilog": {
+    "Elastic": {
+      "Url": "",
+      "User": "",
+      "Password": "",
+      "EnableFileBuffer": false
+    }
+  },
   "HealthOptions": {
     "Enabled": true
   },
