--- a/webapi/src/MccSoft.TemplateApp.App/appsettings.json
+++ b/webapi/src/MccSoft.TemplateApp.App/appsettings.json
@@ -3,17 +3,11 @@
 // Values used during development should be added to appsettings.Development.json
 {
   "Serilog": {
-//    "Loggly": {
-//      "Server": "logs-01.loggly.com",
-//      "Port": 443,
-//      "Token": "b2a89f6a-666d-4825-977c-79499bc958c5",
-//      "InstanceName": "server1"
-//    },
     "EnableConsoleOutput": false,
     "EnableFileOutput": false,
     "Elastic": {
-      "Url": "https://logs.mcc-soft.de:9200",
-      "User": "backend-frontend-server",
+      "Url": "",
+      "User": "",
       "Password": "",
       "EnableFileBuffer": false
     },
