Migrate .sln -> .slnx

--- a/.ci/_settings/base.yml
+++ b/.ci/_settings/base.yml
@@ -10,7 +10,7 @@ variables:
   PATCH_VERSION: $[ counter(variables['BASE_VERSION'], 1) ]
   BUILD_NUMBER: $(BASE_VERSION).$(PATCH_VERSION)
   REACT_APP_BUILD_NUMBER: $(BUILD_NUMBER)
-  solution: 'webapi/MccSoft.TemplateApp.sln'
+  solution: 'webapi/MccSoft.TemplateApp.slnx'
   project: 'webapi/src/MccSoft.TemplateApp.App/MccSoft.TemplateApp.App.csproj'
 
   # General
