--- a/webapi/src/MccSoft.TemplateApp.App/appsettings.json
+++ b/webapi/src/MccSoft.TemplateApp.App/appsettings.json
@@ -186,7 +186,7 @@
     "SiteUrl": "https://templateapp.mcc-soft.de",
     "Host": "smtp.gmail.com",
     "Port": 465,
-    "IsSecureConnection": true,
+    "SecureSocketOptions": 1,
     "Login": "mcc.template.app@gmail.com",
     "Password": "",
     "From": "mcc.template.app@gmail.com",
