--- a/.ci/azure-pipelines-template.yml
+++ b/.ci/azure-pipelines-template.yml
@@ -121,7 +121,7 @@ stages:
                     parameters:
                       name: ${{ variables.DOCKER_TAG }}
 
-  - ${{ if eq(variables.ENABLE_DEPLOY, true) }}:
+  - ${{ if and(eq(variables.ENABLE_DEPLOY, true), eq(variables.ENABLE_DEPLOY_DEV, true)) }}:
       - stage: DeployToDev
         dependsOn:
           - BeforeDeploy
@@ -138,7 +138,7 @@ stages:
                     - template: ./${{ parameters.deploy_template }}
                       parameters:
                         Environment: 'dev'
-                        restartDeployment: true
+                        restartDeployment: false
                         BuildAppNumber: $(BUILD_NUMBER)
 
   - ${{ if and(eq(variables.ENABLE_DEPLOY, true), eq(variables.ENABLE_DEPLOY_GREEN, true)) }}:
@@ -158,7 +158,7 @@ stages:
                     - template: ./${{ parameters.deploy_template }}
                       parameters:
                         Environment: 'green'
-                        restartDeployment: true
+                        restartDeployment: false
                         BuildAppNumber: $(BUILD_NUMBER)
 
   - ${{ if and(eq(variables.ENABLE_DEPLOY, true), eq(variables.ENABLE_DEPLOY_PROD, true)) }}:
@@ -178,7 +178,7 @@ stages:
                     - template: ./${{ parameters.deploy_template }}
                       parameters:
                         Environment: 'prod'
-                        restartDeployment: true
+                        restartDeployment: false
                         BuildAppNumber: $(BUILD_NUMBER)
 
   - ${{ if eq(variables.ENABLE_E2E_STAGE, true) }}:
