--- a/scripts/integresql/docker-compose.yml
+++ b/scripts/integresql/docker-compose.yml
@@ -1,8 +1,6 @@
-version: "3.4"
 services:
-
   integresql:
-    image: allaboutapps/integresql:1.0.0
+    image: ghcr.io/allaboutapps/integresql:v1.1.0
     restart: always
     depends_on:
       - postgres_internal
